# lyricbridge

./: .gitignore  LICENSE  README.md  app.py  lyricbridge.desktop  pyproject.toml  requirements.txt
assets/: app-logo.icns
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  export.py  health.py  search.py  settings.py
backend/app/models/: common.py  enums.py  export.py  search.py  settings.py
backend/app/services/: export.py  search.py  settings.py
backend/app/services/music/: registry.py
backend/app/services/music/providers/: base.py  netease.py  qq.py
docs/: feature-parity-checklist.md
frontend/: README.md  package-lock.json  package.json
frontend/electron/: main.js  preload.cjs  preload.js
frontend/renderer/: index.html  main.js  styles.css
frontend/scripts/: dev-server.mjs
lyricbridge/: __init__.py  config.py  models.py  utils.py
lyricbridge/providers/: __init__.py  netease.py  qq.py
lyricbridge/services/: __init__.py  exporter.py  lyrics.py  translators.py
packaging/arch/: PKGBUILD  lyricbridge.desktop
packaging/arch/lyricbridge/: .SRCINFO  PKGBUILD  lyricbridge.sh
packaging/arch/lyricbridge-git/: PKGBUILD
