[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lyricbridge-backend"
version = "0.1.0"
description = "Python REST backend for the LyricBridge application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "cachetools>=5.3.3",
  "python-dotenv>=1.0.1",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "httpx>=0.27.0",
  "ruff>=0.4.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
